syntax = "proto3" ;


option go_package = "./proto";



message CreateUserRequest {
    string name  = 1;
    string username = 2;
    string password = 3 ;
    string token = 4 ;
}

message CreateUserResponse{
    string message = 1 ;
}

message LoginRequest{
    string username =1 ;
    string password =2 ;
}

message LoginResponse{
    string message =1;
    string token =2 ;
}

message UserInfoRequest{
   string token = 1 ;
}

message UserInfoResponse{
    string message =1 ;
    string name = 2;
    string usernasme = 3;
}

service User{
    rpc CreateUSer(CreateUserRequest) returns (CreateUserResponse){}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc GetUserInfo(UserInfoRequest) returns (UserInfoResponse){}

}
